--- a/resume.html
+++ b/resume.html
@@ -115,11 +115,11 @@
 
     <!-- Embed the PDF -->
     <div class="pdf-container">
-      <iframe src="Ganesh_Bhatkar.pdf" title="Ganesh Bhatkar Resume PDF"></iframe>
+      <iframe src="CV_Ganesh_Bhatkar.pdf" title="Ganesh Bhatkar Resume PDF"></iframe>
     </div>
 
     <!-- Download Button -->
-    <a href="Ganesh_Bhatkar_Resume.pdf" download class="download-btn" aria-label="Download Resume PDF">
+    <a href="CV_Ganesh_Bhatkar.pdf" download class="download-btn" aria-label="Download Resume PDF">
       Download Resume PDF
     </a>
   </main>
