--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <a href="skills.html">Skills</a>
         <a href="projects.html">Projects</a>
         <a href="research.html">Research</a>
-        <a href="resume.html">Resume</a>
+        <a href="resume_.html">Resume</a>
         <a href="blog.html">Blog</a>
       </div>
     </nav>
@@ -130,3 +130,4 @@
 
 </body>
 </html>
+
