--- a/projects.html
+++ b/projects.html
@@ -138,7 +138,7 @@
         <a href="skills.html">Skills</a>
         <a href="projects.html">Projects</a>
         <a href="research.html">Research</a>
-        <a href="resume.html">Resume</a>
+        <a href="resume_.html">Resume</a>
         <a href="blog.html">Blog</a>
       </div>
     </nav>
