--- a/research.html
+++ b/research.html
@@ -102,14 +102,14 @@
       <a href="skills.html">Skills</a>
       <a href="projects.html">Projects</a>
       <a href="research.html">Research</a>
-      <a href="resume.html">Resume</a>
+      <a href="resume_.html">Resume</a>
       <a href="blog.html">Blog</a>
     </div>
   </nav>
 </header>
 
 <main class="content">
-  <h1>Research Proposal</h1>
+<!--  <h1>Research Proposal</h1>
 
   <h2>Title</h2>
   <p><strong>Outdoor Autonomous 3-Wheeled Trike UGV: Active SLAM and Robust Safe Motion Control for Smart City Mobility</strong></p>
@@ -231,7 +231,7 @@
     <li>Koubaa et al., Robot Operating System (ROS): The Complete Reference, Springer</li>
     <li><a href="https://introlab.github.io/rtabmap/" target="_blank" rel="noopener noreferrer">RTAB-Map Official Website</a></li>
   </ul>
-
+-->
 </main>
 
 <footer>
